
WIP      [ROM AUDIT] Add an option to create a default Parent ROM for Redump DATs or NoIntro DATs
         with no PClone information. See NOTES.md for implementation ideas.

WIP      [ROM AUDIT] Options to generate the 1G1R parent list, like prefer ROMs from Europe,
         Japan or USA. This resembles what NARS No-Intro filtering does.

WIP      [SCRAPERS] Improve the Offline Scraper. Improve the quality of the databases.

WIP      [SCRAPERS] Change the Offline Scraper format from XML to JSON. Include the new fields
         `parent` **string**, `region` **list of strings** and `language` **list of strings**.
         In general, write down the specifications of the new Offline Scraper database and
         have a look at NOTES.md for guidelines. Create the XML databases to be merged with the
         No-Intro/Redump DATs, also giving support to Extra ROMs (hacks, etc.).

WIP      [SCRAPERS] ScreenScraper must choose the correct artwork depending on the region/language.
         AEL must have an official list of regions/languages, extracted from the No-Intro/Redump
         DATs, to translate to ScreenScraper values. A No-Intro filename parser is also
         required.


[B]Advanced Emulator Launcher | version 0.10.0 | xx xxxxx 2021[/B]

NOTE     Python 3 version for Matrix in branch release-0.10.x-python3

FEATURE  Create a Python 3 Matrix version 0.10.x to track release 0.9.x.
         Current master branch will be release 0.11.x in Python 3.
         First release 0.9.10 Python 2 and then do the Python 3 conversion into 0.10.0.

FEATURE  Port release 0.9.10 to Python 3.


[B]Advanced Emulator Launcher | version 0.9.10 | xx xxxxx 2021[/B]

NOTE     Python 2 version for Leia/Krypon in branch release-0.9.x-python2
         Have a look at AML code to ease the conversion.

FEATURE  Create file misc.py and refactor utils.py. Copy structure from AML.
         Replace Kodi dialog functions with wrapper functions to facilitate the transition